14.5/my-sec-cont.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: my-sec-cont
spec:
  containers:
  - name: sec-pod
    image: fedora:latest
    command: [ "id" ]
    # command: [ "sh", "-c", "sleep 1h" ]
    securityContext:
      runAsUser: 1000
      runAsGroup: 3000
