14.5/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    app: pod1
spec:
  containers:
    - name: pod1
      image: sysmaking/multitools
      ports:
        - containerPort: 80
