14.5/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  labels:
    app: pod2
spec:
  containers:
    - name: pod2
      image: nginx
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
