14.5/example-network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: pod2
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.233.0.0/16
#        except:
#        - 172.17.1.0/24
#    - namespaceSelector:
#        matchLabels:
#          project: myproject
#    - podSelector:
#        matchLabels:
#          role: frontend
#    ports:
#    - protocol: TCP
#      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.233.0.0/16
#    ports:
#    - protocol: TCP
#      port: 5978
