14.5/my-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod2-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pod2
  policyTypes:
#    - Ingress
    - Egress
#  ingress:
#    - from:
#        - ipBlock:
#            cidr: 10.233.0.0/16
  egress:
    - to:
      - ipBlock:
          cidr: 10.233.0.0/16
